refactor(all): big refactor to improve archtecture
